# markdowner

./: .gitignore  README.ko.md  README.md  VERSION  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
crates/markdowner-core/: Cargo.toml
crates/markdowner-macos/: Cargo.toml
scripts/: build-and-install.sh  build-and-install.test.sh  build-dmg-to-downloads.mjs  build.mjs  bump-version.mjs  sync-version.mjs
src/: App.test.tsx  App.tsx  AppCoreFlow.test.tsx  editorPlayground.tsx  main.tsx  styles.css  styles.test.ts  tauriConfig.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: self-update.sh  self-update.test.sh
src-tauri/src/: default_handler.rs  diagnostics.rs  lib.rs  link_actions.rs  pdf_export.rs  terminal.rs  updater.rs
src/lib/: analytics.ts  closePrompt.test.ts  closePrompt.ts  cursorPosition.test.ts  cursorPosition.ts  defaultApp.test.ts  defaultApp.ts  desktop.ts  documentStats.test.ts  documentStats.ts  documentTabs.test.ts  documentTabs.ts  draftSync.test.ts  draftSync.ts  editorDocumentState.test.ts  editorDocumentState.ts  editorEvents.ts  errors.test.ts  errors.ts  exportDocument.test.ts  exportDocument.ts  exportPageLayout.test.ts  exportPageLayout.ts  exportPreviewZoom.test.ts  exportPreviewZoom.ts  externalChanges.test.ts  externalChanges.ts  fileDialogOptions.test.ts  fileDialogOptions.ts  findReplace.test.ts  findReplace.ts  focusTargets.test.ts  focusTargets.ts  imeDebug.test.ts  imeDebug.ts  keyboardShortcuts.ts  (+72 more)
(+113 files in other folders)
