[package]
name = "markdowner-desktop"
version = "0.260616.0"
description = "Markdowner desktop shell"
edition = "2024"
default-run = "markdowner-desktop"

[lib]
name = "markdowner_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
markdowner-core = { path = "../crates/markdowner-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-cli = "2.4.1"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"

[target."cfg(target_os = \"macos\")".dependencies]
# Default-app (.md) registration through NSWorkspace / UTType.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSURL", "NSString", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "block2", "objc2-uniform-type-identifiers"] }
objc2-uniform-type-identifiers = { version = "0.3", features = ["UTType"] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
